--- a/NMS_POS/NMS_POS.csproj
+++ b/NMS_POS/NMS_POS.csproj
@@ -88,6 +88,12 @@
     </Compile>
     <Compile Include="Invoices_class.cs" />
     <Compile Include="Keys.cs" />
+    <Compile Include="Modal_Invoices_Detail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modal_Invoices_Detail.Designer.cs">
+      <DependentUpon>Modal_Invoices_Detail.cs</DependentUpon>
+    </Compile>
     <Compile Include="New_Invoice.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Invoices.resx">
       <DependentUpon>Invoices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modal_Invoices_Detail.resx">
+      <DependentUpon>Modal_Invoices_Detail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="New_Invoice.resx">
       <DependentUpon>New_Invoice.cs</DependentUpon>
