--- a/NMS_POS/NMS_POS.csproj
+++ b/NMS_POS/NMS_POS.csproj
@@ -94,6 +94,12 @@
     </Compile>
     <Compile Include="Invoices_class.cs" />
     <Compile Include="Keys.cs" />
+    <Compile Include="Manage_Users.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage_Users.Designer.cs">
+      <DependentUpon>Manage_Users.cs</DependentUpon>
+    </Compile>
     <Compile Include="Modal_Invoices_Detail.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +130,7 @@
     <Compile Include="New_Purchase.Designer.cs">
       <DependentUpon>New_Purchase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pos_Users.cs" />
     <Compile Include="Products_class.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -155,6 +162,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Invoices.resx">
       <DependentUpon>Invoices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Users.resx">
+      <DependentUpon>Manage_Users.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Modal_Invoices_Detail.resx">
       <DependentUpon>Modal_Invoices_Detail.cs</DependentUpon>
